--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.7"
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "bootstrap": "^5.3.3",
+    "next": "14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "eslint": "^8",
